# django-msgspec-field

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: auto-tag.yml  create-release.yml  pre-commit-autoupdate.yml  python-test.yml
django_msgspec_field/: __init__.py  _migration_serializers.py  conf.py  drf.py  fields.py  fields.pyi  forms.py  forms.pyi  py.typed  rest_framework.pyi  types.py
django_msgspec_field/compat/: __init__.py  django.py
django_msgspec_field/rest_framework/: __init__.py  coreapi.py  fields.py  mixins.py  openapi.py  parsers.py  renderers.py
tests/: conftest.py  test_conf.py  test_fields.py  test_imports.py  test_migration_serializers.py
tests/sample_app/: models.py
tests/sample_app/migrations/: 0001_initial.py
tests/test_app/: admin.py  models.py
tests/test_app/migrations/: 0001_initial.py
